--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <!-- ENCABEZADO -->
 <head>
     <!-- ENLACE A HOJA DE ESTILOS | CSS -->
-    <link href="Styles/stylesMarcos.css" rel="stylesheet" type="text/css">
+    <link href="Styles/styles.css" rel="stylesheet" type="text/css">
 
     <!-- ENLACE A JAVASCRIPT -->
-    <script src="Scripts/scriptsMarcos.js" defer></script>
+    <script src="Scripts/scripts.js" defer></script>
     
 
     <!-- METADATOS -->
