--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <!-- ENCABEZADO -->
 <head>
     <!-- ENLACE A HOJA DE ESTILOS | CSS -->
-    <link href="Styles/styles.css" rel="stylesheet" type="text/css">
+    <link href="/Styles/styles.css" rel="stylesheet" type="text/css">
 
     <!-- ENLACE A JAVASCRIPT -->
-    <script src="Scripts/scripts.js" defer></script>
+    <script src="/Scripts/scripts.js" defer></script>
     
 
     <!-- METADATOS -->
@@ -20,12 +20,13 @@
     <title>Mi medio limón</title>
 
     <!-- FLAVICON -->
-    <link rel="icon" type="image/x-icon" href="Docs/assets/images/faviconMarcos.ico">
+    <link rel="icon" type="image/x-icon" href="/Docs/assets/images/faviconMarcos.ico">
 </head>
 
 <!-- CUERPO -->
 <body>
     <h1>Hace click en el regalo</h1>
+    <p>hola</p>
     <!-- Botón con imagen -->
     <div class="botonRegalo">
         <button id="miBoton" onclick="cambiarImagen()">
